--- a/Resources/Private/Language/locallang_mod.xlf
+++ b/Resources/Private/Language/locallang_mod.xlf
@@ -12,6 +12,9 @@
       <trans-unit id="mlang_tabs_tab">
         <source>Digital Asset Management</source>
       </trans-unit>
+      <trans-unit id="mlang.lablel.modified">
+        <source>Modified</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
