--- a/Resources/Private/Language/locallang_mod.xlf
+++ b/Resources/Private/Language/locallang_mod.xlf
@@ -12,8 +12,14 @@
       <trans-unit id="mlang_tabs_tab">
         <source>Digital Asset Management</source>
       </trans-unit>
-      <trans-unit id="mlang.lablel.modified">
+      <trans-unit id="dam.labels.files">
+        <source>Files</source>
+      </trans-unit>
+      <trans-unit id="dam.labels.modified">
         <source>Modified</source>
+      </trans-unit>
+      <trans-unit id="dam.labels.filesize">
+        <source>Size</source>
       </trans-unit>
     </body>
   </file>
