--- a/Resources/Private/Language/locallang_vue.xlf
+++ b/Resources/Private/Language/locallang_vue.xlf
@@ -24,6 +24,12 @@
       <trans-unit id="List.table.header.permissions">
         <source>RW</source>
       </trans-unit>
+      <trans-unit id="StorageSelector.title">
+        <source>Select a file storage to browse the assets</source>
+      </trans-unit>
+      <trans-unit id="StorageSelector.label">
+        <source>Select a file storage</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
