[FEATURE] Implement "No storages" overlay and implement storage selector in list / tile view
This commit introduces the overlay notifying the user that no storages are
no available.
Also, the storage selection in the content panel is added and the tree
rendering is refined.

--- a/Resources/Private/Language/locallang_vue.xlf
+++ b/Resources/Private/Language/locallang_vue.xlf
@@ -24,6 +24,21 @@
       <trans-unit id="List.table.header.permissions">
         <source>RW</source>
       </trans-unit>
+      <trans-unit id="List.table.header.storageName">
+        <source>Storage Name</source>
+      </trans-unit>
+      <trans-unit id="List.table.header.storageOnline">
+        <source>Is online?</source>
+      </trans-unit>
+      <trans-unit id="List.table.header.storageType">
+        <source>Type</source>
+      </trans-unit>
+      <trans-unit id="List.table.header.state.true">
+        <source>Yes</source>
+      </trans-unit>
+      <trans-unit id="List.table.header.state.false">
+        <source>No</source>
+      </trans-unit>
       <trans-unit id="StorageSelector.title">
         <source>Select a file storage to browse the assets</source>
       </trans-unit>
